--- a/BugTrackingSoftware/BugTrackingSoftware.csproj
+++ b/BugTrackingSoftware/BugTrackingSoftware.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Bug Entry Form.Designer.cs">
       <DependentUpon>Bug Entry Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Bug Solution Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bug Solution Form.Designer.cs">
+      <DependentUpon>Bug Solution Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,11 +76,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User Panel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="User Panel.Designer.cs">
+      <DependentUpon>User Panel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Admin_Panel.resx">
       <DependentUpon>Admin_Panel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Bug Entry Form.resx">
       <DependentUpon>Bug Entry Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Bug Solution Form.resx">
+      <DependentUpon>Bug Solution Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -91,6 +106,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="User Panel.resx">
+      <DependentUpon>User Panel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
