--- a/BugTrackingSoftware/BugTrackingSoftware.csproj
+++ b/BugTrackingSoftware/BugTrackingSoftware.csproj
@@ -21,6 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,7 +34,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CodeGeneration.Roslyn.Attributes, Version=0.1.0.0, Culture=neutral, PublicKeyToken=ec41cf4c17a5eaf3, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp-dotnet.1.0.0\lib\net40\CodeGeneration.Roslyn.Attributes.dll</HintPath>
+    </Reference>
+    <Reference Include="LibGit2Sharp, Version=0.23.0.0, Culture=neutral, PublicKeyToken=7cbde695407f0333, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp-dotnet.1.0.0\lib\net40\LibGit2Sharp.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.1.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data.Entity, Version=6.1.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +52,12 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Validation, Version=2.2.0.0, Culture=neutral, PublicKeyToken=2fc06f0d701809a7, processorArchitecture=MSIL">
+      <HintPath>..\packages\LibGit2Sharp-dotnet.1.0.0\lib\net40\Validation.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver, Version=3.141.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net40\WebDriver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin_Panel.cs">
@@ -63,6 +78,24 @@
     <Compile Include="Bug Solution Form.Designer.cs">
       <DependentUpon>Bug Solution Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="RequestList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RequestList.Designer.cs">
+      <DependentUpon>RequestList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserDetailEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserDetailEdit.Designer.cs">
+      <DependentUpon>UserDetailEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserDetailView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserDetailView.Designer.cs">
+      <DependentUpon>UserDetailView.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBConnection.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -78,12 +111,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User Panel.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="User Panel.Designer.cs">
-      <DependentUpon>User Panel.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="Admin_Panel.resx">
       <DependentUpon>Admin_Panel.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +119,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Bug Solution Form.resx">
       <DependentUpon>Bug Solution Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RequestList.resx">
+      <DependentUpon>RequestList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserDetailEdit.resx">
+      <DependentUpon>UserDetailEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserDetailView.resx">
+      <DependentUpon>UserDetailView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -108,9 +144,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="User Panel.resx">
-      <DependentUpon>User Panel.cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -120,6 +154,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
